# voxel-renderer

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  shader.h
shader/: shader.frag  shader.vert
src/: glad.c  main.cpp  shader.h
